# quangstation

./: .gitlab-ci.yml  1.24.0  README.md  gui.py  install_quangstation_anaconda_windows.bat  install_quangstation_linux.sh  install_quangstation_venv_windoows.bat  main.py  pyproject.toml  start_quangstation_anaconda_windows.bat  start_quangstation_linux.sh  start_quangstation_venv_windows.bat
CI/: tests.py
core/io/: import.py
docs/: Makefile  readme.md
docs/source/: conf.py  index.rst  installation.rst  modules.rst  opentps.core.config.rst  opentps.core.data.CTCalibrations.MCsquareCalibration.rst  opentps.core.data.CTCalibrations.RayStationCalibration.rst  opentps.core.data.MCsquare.rst  opentps.core.data.dynamicData.rst  opentps.core.data.images.rst  opentps.core.data.plan.rst  opentps.core.data.rst  opentps.core.io.rst  opentps.core.processing.dataComparison.rst  opentps.core.processing.deformableDataAugmentationToolBox.rst  opentps.core.processing.doseCalculation.MCsquare.Materials.rst  opentps.core.processing.doseCalculation.MCsquare.Scanners.rst  opentps.core.processing.doseCalculation.MCsquare.rst  opentps.core.processing.imageSimulation.rst  opentps.core.processing.planDeliverySimulation.rst  opentps.core.processing.planEvaluation.rst  opentps.core.processing.planOptimization.acceleration.rst  opentps.core.processing.planOptimization.rst  opentps.core.processing.rst  opentps.core.processing.segmentation.rst  opentps.core.processing.trackingToolBox.rst  opentps.core.rst  opentps.core.utils.rst  opentps.gui.panels.patientDataPanel.rst  (+20 more)
gui/: gui.py
(+257 files in other folders)
