
[tool.poetry.dependencies]
python = "~3.11"
cachecontrol = "*"
numpy = "^1.26.4"
Pillow = "^9.4.0"
pydicom = "^3.0.1"
vtk = "9.2.6"
PyQt5 = "5.15.10"
PyQt5-Qt5 = '5.15.2'
pyqtgraph = "^0.13.1"
SimpleITK = "^2.2.1"
sparse-dot-mkl = "^0.9.6"
setuptools = "^67.8.0" # Required for local testing with python -m pip install -e .
pandas = "^2.2.3"
requests = "2.28.1"
scikit-image = "*"
pymedphys="^0.40.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
opentps = "opentps.gui:main.run"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"